@@ -1,5 +1,4 @@
 * alias_method and alias_method_chain
 * refactor the global extend method
-* fix extended callback
 * look into __callStatic for extending static methods
 * Add real tests
